--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,17 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  height: 95px;
+  height: fit-content;
   width: 100%;
   padding: 20px;
   background-color: #181b1c;
   border-radius: 0px 0px 30px 30px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.17);
+}
+@media screen and (max-width: 600px) {
+  .nav {
+    flex-direction: column;
+  }
 }
 .nav-title {
   display: flex;
@@ -34,7 +39,7 @@
   gap: 24px;
 }
 .nav-img {
-  height: 100%;
+  height: 64px;
 }
 .nav-heading {
   font-size: 24px;
